# lastfm-rpc-rs

./: Cargo.toml
src/: main.rs
