[package]
name = "rpc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.5"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
